# opentify

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  pages.yml  release.yml
src/: App.css  App.tsx  genreColors.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  library.rs  main.rs  models.rs  player.rs  settings.rs
src-tauri/src/ai/: cloud_provider.rs  features.rs  local_classifier.rs  mod.rs  trained_classifier.rs
src/api/: tauri.ts
src/components/: AnalyzingBanner.tsx  EditTrackModal.tsx  LibraryView.tsx  NowPlayingView.tsx  PlayerBar.tsx  PlaylistView.tsx  SettingsView.tsx  Sidebar.tsx  TrackList.tsx  TrackRow.tsx  icons.tsx
src/platform/: db.ts  index.ts  localStore.ts  tags.ts  tauriPlatform.ts  types.ts  webPlatform.ts
src/state/: store.ts
src/types/: index.ts
tools/train_genre_model/: README.md  extract_dataset.py  features.py  requirements.txt  train.py
