[package]
name = "opentify"
version = "0.1.0"
description = "Opentify - a local, open-source music player"
authors = ["opentify contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "opentify_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.21"
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
directories = "5"
base64 = "0.22"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "vorbis", "aac", "isomp4"] }
rustfft = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
